@@ -4,6 +4,7 @@
    Fix setting up keybindings.
  * src/ao_bookmarklist.c:
    Improve handling of the notebook page (closes #2889415).
+   Add a popup menu to the Bookmark list to easily remove set bookmarks.
 
 
 2009-10-26  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
